--- a/thabitha 1/week8.ipynb
+++ b/thabitha 1/week8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "d8bc1988-1274-4591-b6a6-5a7559daf7db",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "a6b7137b-9588-4c11-a3c1-3ff32c1977a9",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "30                425,010  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "id": "78f3a1c6-e4b2-43c7-9572-ecbda81857b4",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
        "29                 24,264  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "id": "0b2e393c-9401-4243-89a9-e3f52d470261",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
        "4                 17,979  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "id": "86dede70-2913-4555-a8fd-98d4e6dcbeae",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "afb670b7-6839-4510-a834-cc50b65c7069",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
        "29                 24,264  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "id": "97d82e15-d43f-4440-851e-188f7665700f",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "id": "47f5a03d-7456-44d1-9657-ead5b4167a4e",
    "metadata": {},
    "outputs": [
@@ -997,7 +997,7 @@
        "max            22787.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "id": "ef36d6bb-9150-416a-9614-65adc183f921",
    "metadata": {},
    "outputs": [
@@ -1016,31 +1016,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_3748\\3938988555.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_40436\\3938988555.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data1[\" S A Production (Ton) \"]=data1[\" S A Production (Ton) \"].astype(str)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_3748\\3938988555.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_40436\\3938988555.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data1[\"Total Production (Ton)\"]=data1[\"Total Production (Ton)\"].astype(str)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_3748\\3938988555.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_40436\\3938988555.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data1[\" S A Production (Ton) \"]=data1[\" S A Production (Ton) \"].str.replace(\",\",\"\").astype(float)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_3748\\3938988555.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_40436\\3938988555.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data1[\"S B Production (Ton)\"]=data1[\"S B Production (Ton)\"].astype(float)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_3748\\3938988555.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_40436\\3938988555.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1356,7 +1356,7 @@
        "29                 24264.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "id": "6f35e6fd-b98e-4170-8a95-fe76d47137cf",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1685,7 @@
        "0                    649.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "id": "4df7768c-eb39-455a-98dd-b145638a6693",
    "metadata": {},
    "outputs": [
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "id": "72e49d77-6e30-4673-a7b8-34000fa8fae1",
    "metadata": {},
    "outputs": [
@@ -1795,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "id": "366bf4d8-6bf9-403a-9018-fe01cf761521",
    "metadata": {},
    "outputs": [
@@ -1803,8 +1803,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeableNote: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: geopandas in c:\\users\\pc\\appdata\\roaming\\python\\python311\\site-packages (0.14.4)\n",
       "Requirement already satisfied: fiona>=1.8.21 in c:\\users\\pc\\appdata\\roaming\\python\\python311\\site-packages (from geopandas) (1.9.6)\n",
       "Requirement already satisfied: numpy>=1.22 in c:\\programdata\\anaconda3\\lib\\site-packages (from geopandas) (1.26.4)\n",
@@ -1821,7 +1820,8 @@
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=1.4.0->geopandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=1.4.0->geopandas) (2023.3.post1)\n",
       "Requirement already satisfied: tzdata>=2022.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=1.4.0->geopandas) (2023.3)\n",
-      "Requirement already satisfied: colorama in c:\\programdata\\anaconda3\\lib\\site-packages (from click~=8.0->fiona>=1.8.21->geopandas) (0.4.6)\n"
+      "Requirement already satisfied: colorama in c:\\programdata\\anaconda3\\lib\\site-packages (from click~=8.0->fiona>=1.8.21->geopandas) (0.4.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "id": "455da09f-39b5-4062-9b97-2d5b2acc5fe4",
    "metadata": {},
    "outputs": [
@@ -1872,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "id": "7c92f744-778d-4440-ba14-12961cc69069",
    "metadata": {},
    "outputs": [
@@ -1900,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "id": "79150512-e551-4e7d-aba2-d24711778ae3",
    "metadata": {},
    "outputs": [
@@ -1910,7 +1910,7 @@
        "14167.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1921,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "id": "850cf60f-fbc3-4af0-b6e4-e3ad9ced00d9",
    "metadata": {},
    "outputs": [],
